Sun Nov 11 13:41:01 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_using_refinement, rb_mod_using, f_using): clear method
	  cache only when using is called explicitly.

	* test/ruby/test_refinement.rb: related test.

Sun Nov 11 12:56:34 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* lib/pstore.rb (PStore): fix not to replace ThreadError raised in
	  #transaction block with PStore::Error.
	  [ruby-core:39238] [Bug #5269]

Sun Nov 11 11:36:19 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_core.h (rb_call_info_t::refinements), compile.c (new_callinfo):
	  add a new field for inline method cache.

	* vm_insnhelper.c (vm_search_method): check rb_call_info_t::refinements 
	  not to confuse inline method cache when module_eval is used with
	  refinements.

	* test/ruby/test_refinement.rb: related test.

Sun Nov 11 08:45:45 2012  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* ruby.c: removed a comma before "before"

Sat Nov 10 23:02:31 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: move immutable fields from struct heaps_slot and struct
	  sorted_heaps_slot into struct heaps_header.
	  Based on a patch from Sokolov Yura [Feature #6199][ruby-core:43592]

Sat Nov 10 19:28:16 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: modified doc.
	* rational.c: ditto.

Sat Nov 10 18:20:10 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c: edited about era.

Sat Nov 10 12:13:41 2012  Kouhei Sutou  <kou@cozmixng.org>

	* tool/rbinstall.rb: Don't install *.gemspec under lib/.
	  [ruby-core:48966] [Bug #7289]
	  Reported by Vit Ondruch. Thanks!!!

Sat Nov 10 00:49:26 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* ruby_atomic.h: renamed from atomic.h to avoid header file name
	  conflict on Solaris 10. [ruby-dev:46414] [Bug #7287]

	* gc.c, signal.c, vm_core.h, common.mk: reflect the rename from
	  atomic.h to ruby_atomic.h.

Sat Nov 10 00:46:57 2012  Naohisa Goto  <ngotogenome@gmail.com>
