@@ -1,3 +1,9 @@
+Sun Nov 11 15:12:18 2012  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* eval.c (top_using): remove Kernel#using, and add main.using instead.
+
+	* test/ruby/test_refinement.rb: related test.
+
 Sun Nov 11 13:41:01 2012  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* eval.c (rb_using_refinement, rb_mod_using, f_using): clear method
